--- a/main.html
+++ b/main.html
@@ -10,6 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<td>
+			<thead>Name</thead>
+			<thead>Roll Number</thead>
+		</td>
+		<tr>
+			<td>Akshay Sharma</td>
+			<td>16CVB803</td>
+		</tr>
+		<tr>
+			<td>Radhika Bhardwaj</td>
+			<td>18CMB897</td>
+		</tr>
+		
+		
+	</table>
 
 </body>
 
