--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 </script>
 	<table>
 		<td>
-			<thead>Name</thead>
-			<thead>Roll Number</thead>
+			<thead><b>Name</b></thead>
+			<thead><b>Roll Number</b></thead>
 		</td>
 		<tr>
 			<td>Akshay Sharma</td>
