--- a/main.html
+++ b/main.html
@@ -15,10 +15,17 @@
 			<thead><b>Name</b></thead>
 			<thead><b>Roll Number</b></thead>
 		</td>
+		
 		<tr>
 			<td>Akshay Sharma</td>
 			<td>16CVB803</td>
 		</tr>
+		
+		<tr>
+			<td>Radhika Bhardwaj</td>
+			<td>18CMB897</td>
+		</tr>
+		
 		<tr>
 			<td>Radhika Bhardwaj</td>
 			<td>18CMB897</td>
